fix: fix some bugs on mobile ver

--- a/components/Hero/index.module.scss
+++ b/components/Hero/index.module.scss
@@ -173,8 +173,8 @@
     
 
     .button_page {
-      width: 12px;
-      height: 12px;
+      width: 20px;
+      height: 20px;
       border-radius: 100%;
       border: none;
       background: rgba(255, 255, 255, 0.212);
